# checkatron

./: .gitignore  AGENTS.md  README.md  __init__.py  prompt-one-shot.md  pyproject.toml  requirements.txt  run-sql-steps.sh  script.steps.sql.input  script.steps.sql.input.example  script.steps.sql.output  setup.py  wip.txt
.github/workflows/: ci.yml
artifacts/: generated_diff.sql
checkatron/: __init__.py  diffgen.py
checkatron/templates/: full_compare.sql.j2
samples/: README.md  example_after.csv  example_before.csv  example_diff.sql  example_keys.csv  run_example.py  setup_all.sh  setup_all.sql  sf-whoami.step.sh
tests/: test_diffgen.py
tools/: step_ledger.py
