[tool.poetry]
name = "diffgen"
version = "0.1.0"
description = "Brute-force table diff generator for Snowflake"
authors = ["Simon Massey <322608+simbo1905@users.noreply.github.com>"]
packages = [{include = "diffgen.py"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
duckdb = "^0.9"