[tool.poetry]
name = "diffgen"
version = "0.1.0"
description = "Brute-force table diff generator for Snowflake"
authors = ["Simon Massey <322608+simbo1905@users.noreply.github.com>"]
packages = [{include = "diffgen.py"}]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
duckdb = "^0.9"

[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "jinja2.*",
    "duckdb.*",
]
ignore_missing_imports = true